# python3-template

./: .gitignore  README.md  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt  setup.bash  setup.cfg  setup.py
git_hooks/: pre-commit
project/: main.py
src/project/: main.py
tests/: test_canary.py
