[project]
name = "project"
version = "0.0.1"
description = "Python3 sample project"
readme = "README.md"
license = {text = "BSD 3-Clause License"}
requires-python = ">=3.10"

dependencies = [
]

[project.optional-dependencies]
test = [
    "black",
    "mypy",
    "isort",
    "pylint",
]


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

# [tool.setuptools.packages.find]
# where = ["src"]

[tool.mypy]
python_version = "3.10"
warn_unused_ignores = true
warn_unused_configs = true

disallow_untyped_defs = true
check_untyped_defs = true
warn_return_any = true
warn_unreachable = true
no_implicit_optional = true

strict_equality = true

pretty = true

show_error_codes = true

disallow_any_unimported = true


[tool.isort]
profile = "black"