[project]
name = "project"
version = "0.0.1"
description = "Python3 sample project"
readme = "README.md"
license = {text = "BSD 3-Clause License"}
requires-python = ">=3.10"

dependencies = [
]

[project.optional-dependencies]
test = [
    "black",
    "isort",
]


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.isort]
profile = "black"